--- a/Part 1/style.css
+++ b/Part 1/style.css
@@ -24,3 +24,14 @@ html, body{
     bottom: 30px;
     left: calc(50% - 100px);
 }
+.taken{
+    height: 100px!important;
+    width: 100px!important;
+    transition: all 0.5s ease-in;
+    border: solid 3px white;
+    box-shadow: 0 5px 10px 0 rgba(0,0,0,0.2);
+    bottom: 20px;
+    left: 20px;
+    z-index: 2;
+    
+}
