--- a/part-1/style.css
+++ b/part-1/style.css
@@ -4,12 +4,19 @@ html, body{
   height: 100%;
   width: 100%;
 }
+
 #camera, #camera--view, #camera--sensor, #camera--output{
     position: fixed;
     height: 100%;
     width: 100%;
     object-fit: cover;
 }
+
+#camera--view, #camera--sensor, #camera--output{
+    transform: scaleX(-1);
+    filter: FlipH;
+}
+
 #camera--trigger{
     width: 200px;
     background-color: black;
@@ -24,14 +31,14 @@ html, body{
     bottom: 30px;
     left: calc(50% - 100px);
 }
+
 .taken{
     height: 100px!important;
     width: 100px!important;
     transition: all 0.5s ease-in;
     border: solid 3px white;
     box-shadow: 0 5px 10px 0 rgba(0,0,0,0.2);
-    bottom: 20px;
-    left: 20px;
+    top: 20px;
+    right: 20px;
     z-index: 2;
-    
 }
