--- a/part-1/style.css
+++ b/part-1/style.css
@@ -32,6 +32,49 @@ html, body{
     left: calc(50% - 100px);
 }
 
+.bullet{
+    display: flex;
+    flex-direction: row;
+    width: 1340px;
+    color: white;
+    font-size: 16px;
+    padding: 15px 20px;
+    text-align: center;
+    position: fixed;
+    top: 50px;
+    left: calc(100px);
+    z-index: 2;
+
+}
+
+#comment--input{
+    width: 100px;
+    background-color: white;
+    color: black;
+    font-size: 16px;
+    padding: 15px 20px;
+    text-align: center;
+    box-shadow: 0 5px 10px 0 rgba(0,0,0,0.2);
+    position: fixed;
+    bottom: 50px;
+    left: calc(50% + 100px);
+}
+
+#comment--button{
+    width: 100px;
+    background-color: black;
+    color: white;
+    font-size: 16px;
+    border-radius: 30px;
+    border: none;
+    padding: 15px 20px;
+    text-align: center;
+    box-shadow: 0 5px 10px 0 rgba(0,0,0,0.2);
+    position: fixed;
+    bottom: 50px;
+    left: calc(50% + 200px);
+}
+
 .taken{
     height: 100px!important;
     width: 100px!important;
